<resources>
    <string name="app_name">MobileComputingHomework</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="login_view_title">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="alternative_authentication_title">Alternative Authentication</string>
    <string name="alternative_authentication_subtitle">Unlock to use stored credentials</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="sort_by_creation_time">Creation time</string>
    <string name="sort_by_reminder_time">Reminder time</string>

    <string name="add_reminder_view_title">Add Reminder</string>
    <string name="edit_reminder_view_title">Edit Reminder</string>
    <string name="set_reminder_date">Set the reminder date</string>
    <string name="set_reminder_message">Message</string>
    <string name="reminder_time_description">The timer of the reminder expired</string>
    <string name="reminder_location_description">You are close to the reminders location</string>
    <string name="mark_as_seen">Mark as seen</string>
    <string name="dismiss">Dismiss</string>

    <string name="select_location_view_title">Select the location</string>
    <string name="select_location">Select</string>

    <string name="show_reminder_locations_view_title">Select the location</string>

    <string name="user_signup_view_title">User Signup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="signup">Signup</string>
    <string name="invalid_first_name_error">The first name cannot contain spaces</string>
    <string name="invalid_Last_name_error">The last name cannot contain spaces</string>
    <string name="invalid_username_already_exists">The username already exists</string>
    <string name="invalid_username_spaces">The username cannot contain spaces</string>
    <string name="invalid_password_error_spaces">The password cannot contain spaces</string>
    <string name="invalid_password_length">The password must be at least 6 characters long</string>
    <string name="invalid_repeat_password_error">The two password differ</string>
</resources>