<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@id/usernameField"
        app:layout_constraintStart_toStartOf="@id/usernameField"/>

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/passwordDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/passwordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/passwordFieldWrapper"
        app:layout_constraintStart_toStartOf="@id/passwordFieldWrapper"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordFieldWrapper"
        app:boxBackgroundColor="@color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/usernameField"
        app:layout_constraintStart_toStartOf="@id/usernameField"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_credentials"
        android:visibility="invisible"
        android:textSize="12sp"
        android:textColor="@color/error"
        app:layout_constraintTop_toBottomOf="@id/passwordFieldWrapper"
        app:layout_constraintStart_toStartOf="@id/passwordFieldWrapper" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>